
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ uint32_t ;
struct pp_hwmgr {scalar_t__ usec_timeout; int * device; } ;


 int EINVAL ;
 scalar_t__ cgs_read_register (int *,scalar_t__) ;
 int pr_err (char*) ;
 int udelay (int) ;

int phm_wait_on_register(struct pp_hwmgr *hwmgr, uint32_t index,
    uint32_t value, uint32_t mask)
{
 uint32_t i;
 uint32_t cur_value;

 if (hwmgr == ((void*)0) || hwmgr->device == ((void*)0)) {
  pr_err("Invalid Hardware Manager!");
  return -EINVAL;
 }

 for (i = 0; i < hwmgr->usec_timeout; i++) {
  cur_value = cgs_read_register(hwmgr->device, index);
  if ((cur_value & mask) == (value & mask))
   break;
  udelay(1);
 }


 if (i == hwmgr->usec_timeout)
  return -1;
 return 0;
}
